[build-system]
requires = ["setuptools>=64", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "cronpulse-lib"
version = "0.1.4"
description = "CronPulse client library for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [ { name = "Your Name", email = "your.email@example.com" } ]
keywords = ["cron", "monitoring", "scheduling"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]
dependencies = [ "requests>=2.28.0" ]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pre-commit>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/cronpulse-lib"
Repository = "https://github.com/yourusername/cronpulse-lib"
Issues = "https://github.com/yourusername/cronpulse-lib/issues"

[tool.setuptools]
# Include package data (py.typed)
include-package-data = true

[tool.setuptools.packages.find]
include = ["cronpulse_lib", "cronpulse_lib.*"]

[tool.setuptools.package-data]
cronpulse_lib = ["py.typed"]
